--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -73,6 +73,10 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                             </button>
+                            <glkView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" enableSetNeedsDisplay="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecJ-7V-2d2">
+                                <rect key="frame" x="76" y="357" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </glkView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="9K4-o1-get"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
