--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -47,6 +47,21 @@
             <point key="canvasLocation" x="102" y="4"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="fVP-1N-K59">
+            <objects>
+                <viewController id="kkx-FP-mkl" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5rV-hx-LzW">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="TDL-Zi-xAA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IKQ-C2-yi9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="485" y="696"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="Mge-X3-baD">
             <objects>
                 <viewController id="Ec7-7R-xHD" sceneMemberID="viewController">
