--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -105,6 +105,21 @@
             <point key="canvasLocation" x="485" y="696"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="lQY-YP-L0g">
+            <objects>
+                <viewController id="dBL-Od-5MZ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ln5-bU-3Z6">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Tpk-FJ-tdy"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9zb-1M-CR1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1260" y="702"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="Mge-X3-baD">
             <objects>
                 <viewController id="Ec7-7R-xHD" sceneMemberID="viewController">
