--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -57,6 +57,29 @@
             <point key="canvasLocation" x="102" y="4"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="sob-zH-A32">
+            <objects>
+                <viewController id="PUv-c4-dNg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CMn-3B-GJz">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="92u-V9-0XI">
+                                <rect key="frame" x="159" y="506" width="75" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="PpY-7x-snA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vPW-VE-T4j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-245" y="713"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="fVP-1N-K59">
             <objects>
                 <viewController id="kkx-FP-mkl" sceneMemberID="viewController">
